--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "reel-assessment",
   "version": "0.1.0",
+  "homepage": "https://etg624.github.io/reel/",
   "private": true,
   "dependencies": {
     "react": "^16.8.6",
